--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Stock {{currentUser.firstName}}</h2>
+  <h2>Welcome to Stock {{currentUser?.firstName}}</h2>
 </ion-content>
